--- a/.github/workflows/deploy-backend-cloudflare.yml
+++ b/.github/workflows/deploy-backend-cloudflare.yml
@@ -182,12 +182,23 @@ jobs:
           fi
 
       - name: Deploy to Cloudflare Workers
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          workingDirectory: "./backend"
-          command: deploy
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        working-directory: ./backend
+        run: |
+          echo "正在部署到 Cloudflare Workers (将尝试从输出中过滤URL)..."
+          # 使用 set -o pipefail 确保即使管道中的某个命令失败，整个命令也会失败
+          set -o pipefail
+          # 执行 wrangler deploy 并通过 grep -v 过滤掉包含 workers.dev URL 的行
+          # 正则表达式 "https://.*\.workers\.dev" 会匹配标准的 Cloudflare Worker URL
+          npx wrangler deploy | grep -v "https://.*\.workers\.dev"
+          
+          # 如果 npx wrangler deploy 失败 (返回非零退出码), 
+          # 由于 set -e (默认在 GitHub Actions run 步骤中启用) 和 set -o pipefail,
+          # 整个步骤会自动标记为失败。
+          # 来自 wrangler deploy 的 stderr (错误信息) 应该仍然可见。
+          echo "✅ Wrangler deploy 命令已执行 (URL已尝试从标准输出中过滤)。"
 
       - name: Display Success Information
         if: steps.check-deploy-button.outputs.is_deploy_button == 'true' && success()
